--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,11 +1,75 @@
-site_name: Test Documentation
-nav:
-- Home: 'index.md'
-- Subsection:
-  - Page: 'subsection/page.md'
-  
-theme: windmill
+site_name: KI-Campus - Dokumentationen
 
+site_url: https://example.com
+site_author: Ina Stein
+site_description: 
+# Repository
+#repo_name: 
+#repo_url: 
+#edit_uri: ""
+
+# Copyright
+copyright: Copyright &copy; 2021 KI-Campus
+
+# Configuration
 extra_css:
-  - css/some.css
+  - stylesheets/extra.css
   
+  
+markdown_extensions:
+  - pymdownx.emoji:
+      emoji_index: !!python/name:materialx.emoji.twemoji
+      emoji_generator: !!python/name:materialx.emoji.to_svg
+      options:
+        custom_icons:
+          - overrides/.icons
+
+
+theme:
+  name: material
+  custom_dir: overrides
+  logo: images/kic-logo.png
+  favicon: images/favicon.ico
+
+  language: de
+  features:
+    - content.tabs.link
+    - navigation.instant
+    - navigation.tabs
+    - navigation.top
+    - navigation.tracking
+    - search.highlight
+    - search.share
+    - search.suggest
+  font:
+    text: Poppins Black
+    
+  palette:
+    - scheme: kic
+    
+extra:
+  social:
+    - icon: kic/twitter
+      link: https://twitter.com/kicampus
+    - icon: kic/linkedin
+      link: https://www.linkedin.com/school/kicampus
+    - icon: kic/youtube
+      link: https://www.youtube.com/channel/UCtimfZyjzmkpOeLI1s88hcQ
+    - icon: kic/instagram
+      link: https://www.instagram.com/kicampus/
+    - icon: kic/facebook
+      link: https://www.facebook.com/KICampus
+
+    
+nav:
+  - Home: 'index.md'
+  - Kurse konzipieren: 
+    - konz-1: 'konzept/seite1.md'
+    - konz-2: 'konzept/seite2.md'
+  - LMS: 
+    - lms-1: 'lms/seite1.md'
+    - lms-2: 'lms/seite2.md'
+  - Kurse einbinden: 
+    - seite1: 'integration/seite1.md'
+  - Über uns: 'about.md'
+
